2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/31_while_cond_bool.deca
// Description :
//     while infini   
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024
{

    while(true)
    {
        print("Bonjour !!");
    }
}