2A/05_Projet_GL/src/test/deca/context/invalid/complet/70_retur_str.deca
// Description :
//  return string avce void 
// Resultats :
//    ligne 11 : le type attendu doit étre différent de void
// Historique : 
//  cree le 16/01/2024

class A {

    void get() {
        return "Au revoir GL";
    }
}